--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,19 @@ plugins {
 
 dependencies{
     implementation project(':lib')
+    implementation 'org.mindrot:jbcrypt:0.4'
+    testImplementation 'org.mockito:mockito-core:4.0.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
+
+}
+
+test {
+    useJUnitPlatform()
+}
+
+application{
+    mainClass = 'AppGerenciamentoVendas.Main'
 }
 
 description = 'app'
