--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -4,6 +4,16 @@ plugins {
 
 dependencies{
     implementation 'org.postgresql:postgresql:42.7.3'
+    implementation 'org.mindrot:jbcrypt:0.4'
+    testImplementation 'org.mockito:mockito-core:4.0.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
+
 }
+
+test {
+    useJUnitPlatform()
+}
+
 
 description = 'lib'
